opam-version: "1.2"
maintainer: "opam-devel@lists.ocaml.org"
authors: ["Jérémie Dimino"]
homepage: "https://github.com/ocaml-community/zed"
bug-reports: "https://github.com/ocaml-community/zed/issues"
dev-repo: "git://github.com/ocaml-community/zed.git"
license: "BSD3"
depends: [
  "jbuilder" {build & >= "1.0+beta9"}
  "base-bytes"
  "camomile" {>= "0.8"}
  "react"
]
build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
available: [ocaml-version >= "4.02.3"]
