opam-version: "1.2"
maintainer: "opam-devel@lists.ocaml.org"
authors: ["Jérémie Dimino"]
homepage: "https://github.com/ocaml-community/zed"
bug-reports: "https://github.com/ocaml-community/zed/issues"
dev-repo: "git://github.com/ocaml-community/zed.git"
license: "BSD3"
depends: [
  "dune" {build & >= "1.0.0"}
  "base-bytes"
  "uucd"
  "uutf"
  "uuseg"
  "react"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]
available: [ocaml-version >= "4.02.3"]
